<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainCalc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="0.09">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Del"
            android:textColor="#f00"
            android:textSize="@dimen/abc_text_size_title_material" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".16">


        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/seven"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/eight"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/nine"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

        <Button
            android:id="@+id/dev"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/div"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".16">

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/four"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/five"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/six"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/multiply"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".16">

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/one"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/two"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/three"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/subtract"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".16">

        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/dot"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />


        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/zero"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/equal"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".142"
            android:text="@string/add"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material" />
    </LinearLayout>

</LinearLayout>
