    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/advanceLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/row11"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09" >

            <TextView
                android:id="@+id/result2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <Button
                android:id="@+id/clear2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Del"
                android:textColor="#f00"
                android:textSize="@dimen/abc_text_size_title_material" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row22"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".16" >


            <Button
                android:id="@+id/sin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text="@string/sin"
                android:textSize="@dimen/abc_dialog_padding_material" />

            <Button
                android:id="@+id/cos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text="@string/cos"
                android:textSize="@dimen/abc_dialog_padding_material" />

            <Button
                android:id="@+id/tan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text="@string/tan"
                android:textSize="@dimen/abc_dialog_padding_material" />

            <Button
                android:id="@+id/i"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text="@string/i"
                android:textSize="@dimen/abc_dialog_padding_material" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row32"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".16" >

            <Button
                android:id="@+id/ln"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text="@string/ln"
                android:textSize="@dimen/abc_dialog_padding_material" />

            <Button
                android:id="@+id/log"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text="@string/log"
                android:textSize="@dimen/abc_dialog_padding_material" />

            <Button
                android:id="@+id/pi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text="@string/pi"
                android:textSize="@dimen/abc_dialog_padding_material" />

            <Button
                android:id="@+id/e"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text="@string/e"
                android:textSize="@dimen/abc_dialog_padding_material" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row42"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".16" >

            <Button
                android:id="@+id/mode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text="@string/mode"
                android:textSize="@dimen/abc_dialog_padding_material" />

            <Button
                android:id="@+id/factorial"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text="@string/factorial"
                android:textSize="@dimen/abc_dialog_padding_material" />

            <Button
                android:id="@+id/sqroot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text="@string/sqroot"
                android:textSize="@dimen/abc_dialog_padding_material" />



            <Button
                android:id="@+id/power"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text="@string/power"
                android:textSize="@dimen/abc_dialog_padding_material" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row52"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".16" >

            <Button
                android:id="@+id/open"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text="@string/open"
                android:textSize="@dimen/abc_dialog_padding_material" />


            <Button
                android:id="@+id/close"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text="@string/close"
                android:textSize="@dimen/abc_dialog_padding_material" />

            <Button
                android:id="@+id/null1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text=""
                android:textSize="@dimen/abc_dialog_padding_material" />

            <Button
                android:id="@+id/null2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".142"
                android:text=""
                android:textSize="@dimen/abc_dialog_padding_material" />
        </LinearLayout>

    </LinearLayout>
